--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gsap": "^3.9.1",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
